# subtitles-delay

./: .gitignore  CMakeLists.txt  Fallen.Leaves.2023.1080p.BluRay.x264.AAC5.1-[YTS.MX].srt  Makefile  README.md  TODO.txt  add_delay_to_file.c  main.c  old_Fallen.Leaves.2023.1080p.BluRay.x264.AAC5.1-[YTS.MX].srt  old_old_Fallen.Leaves.2023.1080p.BluRay.x264.AAC5.1-[YTS.MX].srt  old_old_old_Fallen.Leaves.2023.1080p.BluRay.x264.AAC5.1-[YTS.MX].srt  old_subfile.srt  read_and_alternate.c  reading_directory.c  rename_and_delete.c  sub_delay.c  sub_delay.h  subtitle_delay  test  test.c  test_file.txt  test_is_number.c  time_manipulation.c
Functions/: all_functions.c  func_add_delay_to_file.c  func_find_srt_file.c  func_time_to_int.c  func_time_to_text.c  sub_delay.h
Functions/Testing_functions/: read_and_alternate.c  reading_srt_file.c  time_manipulation.c
Linux_x86_64/: subtitle_delay
